--- a/MvcPWy/Views/Home/IdentifyVulnerableKids.cshtml
+++ b/MvcPWy/Views/Home/IdentifyVulnerableKids.cshtml
@@ -107,7 +107,7 @@
                 </div>
                 <div class="panel panel-danger">
                     <div class="panel-heading"></div>
-                    <div class="panel-body" style="word-break: break-all; overflow-y: scroll;">
+                    <div class="panel-body" style="word-break: break-all; max-height: 550px; overflow-y: scroll;">
                         <div class="row clearfix">
                             <div id="surveyElement"></div>
                             <div id="surveyResult"></div>
